Fix View Device

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,6 @@
     <link rel="icon" type="image/x-icon" href="assets/img/Logo.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style_2.css" />
   </head>
   <body>
     <main>
@@ -340,7 +339,7 @@
         </div>
       </section>
 
-      <section id="order" data-aos="flip-left" data-aos-duration="1000" class="reservasi py-5">
+      <section id="order" data-aos="fade-up" data-aos-duration="1000" class="reservasi py-5">
         <div class="container">
           <h2 class="text-white text-center">Reservasi Online</h2>
           <p class="text-white text-center">Silahkan Isi Sesuai Dengan Ketentuan</p>
