--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Saung Andes</title>
+  <!-- Primary Meta Tags -->
+  <title>Saung Andes</title>
+  <meta name="title" content="Saung Andes" />
+  <meta name="description" content="Nikmati Sensasi Kelezatan Masakan Asli Khas Nusantara " />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://saung-andes.vercel.app/" />
+  <meta property="og:title" content="Saung Andes" />
+  <meta property="og:description" content="Nikmati Sensasi Kelezatan Masakan Asli Khas Nusantara " />
+  <meta property="og:image" content="https://saung-andes.vercel.app/assets/img/bg.jpeg" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://saung-andes.vercel.app/" />
+  <meta property="twitter:title" content="Saung Andes" />
+  <meta property="twitter:description" content="Nikmati Sensasi Kelezatan Masakan Asli Khas Nusantara " />
+  <meta property="twitter:image" content="https://saung-andes.vercel.app/assets/img/bg.jpeg" />
+  
+  <!-- Meta Tags Generated with https://metatags.io -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/css/style.css" />
